--- a/flask_api/pyproject.toml
+++ b/flask_api/pyproject.toml
@@ -17,6 +17,7 @@ pysqlite3-binary = "^0.5.2.post1"
 umap-learn = "^0.5.4"
 requests = "^2.31.0"
 flask = "^3.0.0"
+sentence-transformers = "^2.2.2"
 
 
 [build-system]
