--- a/flask_api/.vscode/launch.json
+++ b/flask_api/.vscode/launch.json
@@ -8,7 +8,7 @@
       "name": "Python: Run server",
       "type": "python",
       "request": "launch",
-      "python": "${workspaceFolder}/.venv/bin/python",
+      "python": "/home/marroyo/.cache/pypoetry/virtualenvs/api-3tmKg6d1-py3.10/bin/python",
       "program": "${workspaceFolder}/app.py",
       "args": [],
       "justMyCode": true
