--- a/flask_api/pyproject.toml
+++ b/flask_api/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "flask-api"
+name = "api"
 version = "0.1.0"
 description = ""
 authors = ["Manuel Arroyo <marroyo@flameanalytics.com>"]
@@ -18,6 +18,7 @@ umap-learn = "^0.5.4"
 requests = "^2.31.0"
 flask = "^3.0.0"
 sentence-transformers = "^2.2.2"
+matplotlib = "^3.8.2"
 
 
 [build-system]
