--- a/ux/package.json
+++ b/ux/package.json
@@ -41,6 +41,7 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "mitt": "^3.0.1"
+    "mitt": "^3.0.1",
+    "vue-multiselect": "^3.0.0-alpha.2"
   }
 }
