--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ pysqlite3-binary
 chromadb~=0.5.0
 umap~=0.1.1
 umap-learn~=0.5.6
-entence_transformers~=2.7.0
+sentence_transformers~=2.7.0
+gpt4all~=2.6.0
